Fixed text overflow on projects.

--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ body, h2 {
   justify-content: space-around;
   align-items: center;
   width: 23vw;
-  height: 40vh;
+  height: 45vh;
   margin: 0 10px;
   border: 1px solid #d3d3d3;
   border-radius: 5px;
@@ -273,7 +273,7 @@ body, h2 {
 
 .project-p {
   padding: 0;
-  margin: 0;
+  margin: 0 10px;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -294,10 +294,11 @@ body, h2 {
 
   .project {
     width: 50vw;
+    height: 50vh;
   }
 
   .project-thumbnail {
-    max-width: 45vw;
+    max-width: 35vw;
   }
 }
 
@@ -308,7 +309,6 @@ body, h2 {
   }
 
   .project {
-    height: 55vh;
     width: 60vw;
   }
 
